--- a/app/src/main/res/layout/activity_confrim.xml
+++ b/app/src/main/res/layout/activity_confrim.xml
@@ -9,12 +9,14 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.example.akashsalow.project.ConfirmDetailActivity">
+    tools:context="com.example.akashsalow.project.ConfrimActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
+
 
         <ImageView
             android:id="@+id/imageView"
@@ -28,55 +30,51 @@
             style="@style/textview_style"
             android:textAllCaps="true"
             android:textStyle="bold"
-            android:text="Confrim Deatils" />
-
+            android:text="Confrim Details" />
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="#FFFFFF" />
         <TextView
-            android:id="@+id/dfirstname"
+            android:id="@+id/dName"
             style="@style/textview_style"
             android:textAllCaps="false"
             android:paddingTop="16dp"
             android:paddingBottom="8dp"
             android:text="TextView" />
 
+
+
         <TextView
-            android:id="@+id/dlastname"
+            android:id="@+id/dphoneno"
             style="@style/textview_style"
             android:textAllCaps="false"
             android:paddingBottom="8dp"
             android:text="TextView" />
 
         <TextView
-            android:id="@+id/dphonenumber"
+            android:id="@+id/dunit"
             style="@style/textview_style"
             android:textAllCaps="false"
             android:paddingBottom="8dp"
             android:text="TextView" />
-
         <TextView
-            android:id="@+id/daddress"
+            android:id="@+id/dtechnology"
             style="@style/textview_style"
             android:textAllCaps="false"
             android:paddingBottom="8dp"
             android:text="TextView" />
-
         <TextView
-            android:id="@+id/dguests"
+            android:id="@+id/ddc"
             style="@style/textview_style"
             android:textAllCaps="false"
             android:paddingBottom="8dp"
             android:text="TextView" />
-
-        <TextView
-            android:id="@+id/drooms"
-            style="@style/textview_style"
-            android:textAllCaps="false"
-            android:paddingBottom="8dp"
-            android:text="TextView" />
-
         <Button
-            android:id="@+id/confrimBTN"
+            android:id="@+id/confrim_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             style="@style/button_style"
-            android:textAllCaps="false"
             android:text="Confrim" />
-    </LinearLayout>
-</RelativeLayout>
+        </LinearLayout>
+    </RelativeLayout>
